--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #332c29;
-}
-
 h1,
 h2 {
     font-family: 'Poppins';
@@ -178,6 +174,7 @@ p {
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    backdrop-filter: brightness(70%);
 }
 
 .hero-container {
@@ -194,6 +191,7 @@ p {
 
 .hs-title {
     margin-bottom: 3rem;
+    z-index: 1;
 }
 
 #h-title_s {
@@ -210,10 +208,10 @@ p {
     padding: 0.7rem 4rem;
 }
 
-/* ------------------------------------------------- About Us ------------------------------------------------- */
+/* ------------------------------------------------- About Us #1e1c1a ------------------------------------------------- */
 .about-container {
     height: 1020px;
-    background-color: #332c29;
+    background-color: #1e1c1a;
     position: relative;
 }
 
