--- a/styles.css
+++ b/styles.css
@@ -135,13 +135,17 @@ p {
     padding-left: 0.3rem
 }
 
-@media (max-width:600px) {
+@media (max-width:500px) {
     .theme {
         margin-top: 11rem;
     }
 
     .offcanvas-body {
         padding: 0 1rem;
+    }
+
+    .offcanvas {
+        --bs-offcanvas-width: 100%;
     }
 
 }
@@ -153,6 +157,10 @@ p {
 
     .offcanvas-body {
         padding: 0 1rem;
+    }
+
+    .offcanvas {
+        width: 4px;
     }
 
 }
